--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                                 Записаться
                             </button>
                             <button class="btn-transparent">
-                                Подробнее
+                                <a href="/pole-dance.html"> Подробнее</a>
                             </button>
                         </div>
                     </div>
