--- a/pole-dance.html
+++ b/pole-dance.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/reset.css">
 
     <!-- Подключаем стили= -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/pole-dance.css">
 
     <!-- Шрифт Roboto Condensed -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,13 +41,13 @@
                 </div>
                 <nav class="nav-list">
                     <div class="nav-item">
-                        <a href="#direction">Направления</a>
+                        <a href="/index.html#direction">Направления</a>
                     </div>
                     <div class="nav-item">
                         <a href="/schedule.html">Расписание</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#subscriptions">Абонементы</a>
+                        <a href="/index.html#subscriptions">Абонементы</a>
                     </div>
                     <div class="nav-item">
                         <a href="/teachers.html">Преподаватели</a>
@@ -103,7 +103,130 @@
 
 <main class="section-background">
 
+    <section class="section-direction">
+        <div class="container">
+            <div class="list-direction-img">
+                <div class="direction-block">
+                    <div class="title">
+                        <h2 class="direction-title">
+                            Pole Dance
+                        </h2>
+                        <p class="double-title">
+                            Pole Dance
+                        </p>
+                    </div>
+                    <div class="about-direction">
+                        <p class="direction-description">
+                            <span class="accet-text"> Pole Dance </span> – это танцевальное направление, которое не имеет ничего общего со стриптизом. Это танец на пилоне (акробатика на шесте), где выступление проходит на статическом или вращающемся пилоне, одновременно сочетая в себе:
+                        </p>
+                        <ul class="list-direction">
+                            <ol class="ol-text">
+                                хореографию;
+                            </ol>
+                            <ol class="ol-text">
+                                спортивную гимнастику;
+                            </ol>
+                            <ol class="ol-text">
+                                акробатику.
+                            </ol>
+                        </ul>
+                        <p class="direction-description">
+                            Пожалуй, это именно тот вид спорта, в котором всегда есть к чему стремиться и нет предела совершенству. В нем невозможно сразу одинаково хорошо выполнять все элементы, ввиду физиологических особенностей организма. Поэтапно нарабатывая силу, гибкость и выносливость, спортсмен пополняет запас освоенных упражнений, повышает уровень их сложности.
+                        </p>
+                    </div>
+                </div>
+                <div class="img-pole-dance">
+                    <img src="/images/Pole Dance.png" alt="Pole Dance">
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- запись -->
+
+    <section class="section-record container">
+        <div class="record-list">
+
+            <div class="record-item">
+                <div class="record-button">
+                        <p class="record-description day-week">
+                            Понедельник
+                        </p>
+                    <div class="week-time">
+                        <p class="record-description">
+                            20:00
+                        </p>
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="record-item">
+                <div class="record-button">
+                        <p class="record-description day-week">
+                            Среда
+                        </p>
+                    <div class="week-time">
+                        <p class="record-description">
+                            20:00
+                        </p>
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="record-item">
+                <div class="record-button">
+                        <p class="record-description day-week">
+                            Суббота
+                        </p>
+                    <div class="week-time">
+                        <p class="record-description">
+                            12:00
+                        </p>
+                        <button class="btn-yellow">
+                            Записаться
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- баннер -->
+
+    <section class="container section-pdb">
+        <div class="banner pdb-img">
+            <p class="title-banner">
+                Первое занятие - бесплатно!
+            </p>
+            <button class="btn-yellow">
+                Записаться
+            </button>
+        </div>
+    </section>
+
+    <!-- кнопка -->
+
+    <section class="container section-more-pdb">
+        <div class="more-list">
+            <div class="btn-style">
+                <p class="name-btn">
+                    Посмотреть другие направления 
+                </p>
+                <div class="icon-list">
+                    <i class="fa-solid fa-chevron-right icon-pdb"></i>
+                    <i class="fa-solid fa-chevron-right icon-pdb"></i>
+                    <i class="fa-solid fa-chevron-right icon-pdb"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </main>
 
