--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                         lifestyle dance club
                     </p>    
                 </div>
+                <div class="hamburger-menu">
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                </div>
                 <nav class="nav-list">
                     <div class="nav-item">
                         <a href="/index.html#direction">Направления</a>
@@ -76,7 +81,7 @@
                             Время новых увлечений!
                         </h1>
                         <p class="hero-description">
-                            Специальное предлжение для студентов - En l'air дарит скидку - 20% на базовую карту!
+                            Специальное предложение для студентов - En l'air дарит скидку - 20% на базовую карту!
                         </p>
                         <div class="hero-button">
                             <button class="btn hero-btn">
