mv | Pole Dance

--- a/pole-dance.html
+++ b/pole-dance.html
@@ -20,7 +20,7 @@
     <!-- Иконки -->
     <script src="https://kit.fontawesome.com/9d86f44a3a.js" crossorigin="anonymous"></script>
 
-    <title>Студия танцев</title>
+    <title>Студия танцев | направление Pole Dance</title>
 
 </head>
 <body>
@@ -38,6 +38,11 @@
                     <p class="dance-club">
                         lifestyle dance club
                     </p>    
+                </div>
+                <div class="hamburger-menu">
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
                 </div>
                 <nav class="nav-list">
                     <div class="nav-item">
@@ -135,9 +140,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="img-pole-dance">
-                    <img src="/images/Pole Dance.png" alt="Pole Dance">
-                </div>
+                <img class="img-pole-dance" src="/images/Pole Dance.png" alt="Pole Dance">
             </div>
         </div>
     </section>
@@ -152,8 +155,14 @@
                         <p class="record-description day-week">
                             Понедельник
                         </p>
+                        <p class="record-description-mv day-week">
+                            ПН
+                        </p>
                     <div class="week-time">
                         <p class="record-description">
+                            20:00
+                        </p>
+                        <p class="record-description-mv">
                             20:00
                         </p>
                         <button class="btn-yellow">
@@ -168,8 +177,14 @@
                         <p class="record-description day-week">
                             Среда
                         </p>
+                        <p class="record-description-mv day-week">
+                            СР
+                        </p>
                     <div class="week-time">
                         <p class="record-description">
+                            20:00
+                        </p>
+                        <p class="record-description-mv">
                             20:00
                         </p>
                         <button class="btn-yellow">
@@ -184,8 +199,14 @@
                         <p class="record-description day-week">
                             Суббота
                         </p>
+                        <p class="record-description-mv day-week">
+                            СБ
+                        </p>
                     <div class="week-time">
                         <p class="record-description">
+                            12:00
+                        </p>
+                        <p class="record-description-mv">
                             12:00
                         </p>
                         <button class="btn-yellow">
