--- a/schedule.html
+++ b/schedule.html
@@ -39,6 +39,11 @@
                         lifestyle dance club
                     </p>    
                 </div>
+                <div class="hamburger-menu">
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                    <div class="hamburger-line"></div>
+                </div>
                 <nav class="nav-list">
                     <div class="nav-item">
                         <a href="/index.html#direction">Направления</a>
