--- a/schedule.html
+++ b/schedule.html
@@ -126,12 +126,14 @@
 
             <div class="cards-schedule-item">
                 <div class="schedule-position">
-                    <div class="cards-item-img cards-pole-dance"> 
-                        <div class="border-accent">
-                            <p class="name-schedule">
-                                <span class="accent-schedule">Pole Dance</span>
-                            </p>
-                        </div>
+                    <div class="cards-pole-dance"> 
+                    <div class="substrate-transparent">
+                            <div class="border-accent">
+                                <p class="name-schedule">
+                                    <span class="accent-schedule">Pole Dance</span>
+                                </p>
+                            </div>
+                    </div>
                     </div>
                     <div class="schedule-date">
                         <div class="schedule-date-border">
@@ -161,12 +163,14 @@
             </div>
 
             <div class="cards-schedule-item">
-                <div class="cards-item-img cards-children">
+                <div class="cards-children">
+                <div class="substrate-transparent">
                     <div class="border-accent">
                         <p class="name-schedule">
                             <span class="accent-schedule">ДЛЯ ДЕТЕЙ</span>
                         </p>
                     </div>
+                </div>  
                 </div>
                 <div class="schedule-date">
                     <div class="schedule-date-border">
@@ -195,13 +199,15 @@
             </div>
 
             <div class="cards-schedule-item">
-                <div class="cards-item-img cards-hip-hop">
+                <div class="cards-hip-hop">
+                <div class="substrate-transparent">
                     <div class="border-accent">
                         <p class="name-schedule">
                             <span class="accent-schedule">HIP-HOP</span>
                         </p>
                     </div>
                 </div>
+                </div>
                 <div class="schedule-date">
                     <div class="schedule-date-border">
                         <div class="date-list">
@@ -229,13 +235,15 @@
             </div>
 
             <div class="cards-schedule-item">
-                <div class="cards-item-img cards-caribbean-mix">
+                <div class="cards-caribbean-mix">
+                <div class="substrate-transparent">
                     <div class="border-accent">
                         <p class="name-schedule">                    
                             <span class="accent-schedule">CARIBBEAN MIX</span>
                         </p>
                     </div>
                 </div>
+                </div>
                 <div class="schedule-date">
                     <div class="schedule-date-border">
                         <div class="date-list">
@@ -263,13 +271,15 @@
             </div>
 
             <div class="cards-schedule-item">
-                <div class="cards-item-img cards-sky-jumping">
+                <div class="cards-sky-jumping">
+                <div class="substrate-transparent">
                     <div class="border-accent">
                         <p class="name-schedule">
                             <span class="accent-schedule">Sky Jumping</span>
                         </p>
                     </div>
                 </div>
+                </div>
                 <div class="schedule-date">
                     <div class="schedule-date-border">
                         <div class="date-list">
@@ -297,12 +307,14 @@
             </div>
 
             <div class="cards-schedule-item">
-                <div class="cards-item-img cards-dance-mix">
+                <div class="cards-dance-mix">
+                <div class="substrate-transparent">
                     <div class="border-accent">
                         <p class="name-schedule">
                             <span class="accent-schedule"> Dance Mix </span>
                         </p>
                     </div>
+                </div>
                 </div>
                 <div class="schedule-date">
                     <div class="schedule-date-border">
