--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
                 </div>
                 <nav class="nav-list">
                     <div class="nav-item">
-                        <a href="/index.html#direction">Направления</a>
+                        <a class="link" href="/index.html#direction">Направления</a>
                     </div>
                     <div class="nav-item">
-                        <a href="/schedule.html">Расписание</a>
+                        <a class="link" href="/schedule.html">Расписание</a>
                     </div>
                     <div class="nav-item">
-                        <a href="/index.html#subscriptions">Абонементы</a>
+                        <a class="link" href="/index.html#subscriptions">Абонементы</a>
                     </div>
                     <div class="nav-item">
-                        <a href="/teachers.html">Преподаватели</a>
+                        <a class="link" href="/teachers.html">Преподаватели</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#footer">Контакты</a>
+                        <a class="link" href="#footer">Контакты</a>
                     </div>
                 </nav>
             </header>
