--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </div>
         </div>
 
-        <div class="subscriptions-list container">
+        <!-- <div class="subscriptions-list container">
 
             <div class="subscriptions-item">
                 <div class="rate-min">
@@ -447,6 +447,101 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="subscriptions-list container">
+
+            <div class="subscriptions-item">
+                <div class="rate-min">
+                    <div class="blur-substrate">    
+                        <div class="rate">
+                            <div class="text-subscriptions">
+                                <p class="title-subscriptions">
+                                    МИНИМАЛЬНЫЙ
+                                </p>
+                                <p class="description-subscriptions">
+                                    Количество и время занятий: 4 любых занятия (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                </p>
+                            </div>
+                            <div class="price-buy">
+                                <div class="price-subscriptions">
+                                    <p class="price">
+                                        Цена:
+                                    </p>
+                                    <p class="price-accent">
+                                        4 000 ₽
+                                    </p>
+                                </div>
+                                <button class="buy btn-yellow">
+                                    Купить
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="subscriptions-item">
+                <div class="rate-standart">
+                    <div class="blur-substrate">
+
+                            <div class="rate">
+                                <div class="text-subscriptions">
+                                    <p class="title-subscriptions">
+                                        СТАНДАРТНЫЙ
+                                    </p>
+                                    <p class="description-subscriptions">
+                                        Количество и время занятий: 8 любых занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                    </p>
+                                </div>
+                                <div class="price-buy">
+                                    <div class="price-subscriptions">
+                                        <p class="price">
+                                            Цена:
+                                        </p>
+                                        <p class="price-accent">
+                                            7 400 ₽
+                                        </p>
+                                    </div>
+                                    <button class="buy btn-yellow">
+                                        Купить
+                                    </button>
+                                </div>
+                            </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="subscriptions-item">
+                <div class="rate-max">
+                    <div class="blur-substrate">
+                            <div class="rate">
+                                <div class="text-subscriptions">
+                                    <p class="title-subscriptions">
+                                        БЕЗЛИМИТНЫЙ
+                                    </p>
+                                    <p class="description-subscriptions">
+                                        Количество и время занятий:  любое колличество занятий (групповых) длительностью -1, 5 часа, в любое выбранное вами время согласно расписанию, в течение 30 календарных дней. <br> Срок действия: 30 календарных дней, с момента преобретения
+                                    </p>
+                                </div>
+                                <div class="price-buy">
+                                    <div class="price-subscriptions">
+                                        <p class="price">
+                                            Цена:
+                                        </p>
+                                        <p class="price-accent">
+                                            14 000 ₽
+                                        </p>
+                                    </div>
+                                    <button class="buy btn-yellow">
+                                        Купить
+                                    </button>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div>
